# mcp-server-learning

./: .coverage  .env.example  AGENTS.md  CLAUDE.md  README.md  claude-desktop-config.json  hello.py  pyproject.toml  pytest.ini  test_basic.py  test_zotero_connection.py
scripts/: cloudflared-config.example.yml  run_learning_suite.sh  verify_remote_mcp.sh
src/mcp_server_learning/: __init__.py  fastmcp_flashcard_server.py  fastmcp_learning_suite_server.py  fastmcp_math_verification_server.py  fastmcp_obsidian_server.py  fastmcp_zotero_server.py  flashcard_server.py  obsidian_connector.py  obsidian_mcp_server.py  types.py  zotero_connector.py  zotero_mcp_server.py  zotero_server.py
tests/: conftest.py  test_anki_connectivity.py  test_display_latex.py  test_fastmcp_flashcard_server.py  test_fastmcp_obsidian_server.py  test_fastmcp_zotero_server.py  test_latex_rendering.py  test_math_verification.py  test_sigmoid_flashcard.py  verify_anki_cards.py
